housekeeping, ui alignment fixes)

--- a/global_styling.css
+++ b/global_styling.css
@@ -8,6 +8,12 @@ h1 {
     text-align: center;
 }
 
+h2 {
+    color: black;
+    font-size: 20px;
+    text-align: center;
+}
+
 p {
     color: black;
     font-size: 16px;
